# wikidiary

./: .gitignore  LICENSE  README.md  log.txt  pyproject.toml
meta/: colors.tsv  delete_strings.txt  hierarchy.tsv
meta/backup/: articles.yaml
meta/podcast/: name_mapping.txt  with_fotos.txt
templates/: Ausgabe  Besitz  Book  DiaryBox_header  Einkauf  Fahrt  Gastro  Reise
tests/: test_login.py
wikidiary/: __init__.py  diary.py
wikidiary/scripts/: download_wiki_data_s3.py  generate_diary_smw_s3.py  show_wiki_diary.py  transfer_s3_to_wiki.py  upload_smw_s3.py  wiki.py
wikidiary/standards/: message.py
